# multi-agent-concierge

./: .gitignore  SOURCES.md  pyproject.toml
atlas/actions/finance/: finance_tools.py  test_finance_tools.py  websearch_tools.py
atlas/agents/: __init__.py
atlas/agents/finance/: __init__.py  company_research_agent.py  consumer_research_agent.py  industry_research_agent.py  stock_agent.py
atlas/agents/multiagents/: __init__.py  concierge_agent.py  finance_research.py  orchestrator_agent.py  quality_eval_agent.py
atlas/multiagents/: __init__.py  concierge_agent.py  finance_config.py  finance_research.py  orchestrator_agent.py  quality_eval_agent.py
